--- a/main.html
+++ b/main.html
@@ -43,9 +43,9 @@
             <td id="t12">Row 1, Col 2</td>
             <td id="t13" class="right">Row 1, Col 3</td>
         </tr>
-        <tr class="center">
-            <td>Row 2, Col 1</td>
-            <td>Row 2, Col 2</td>
+        <tr>
+            <td class="center">Row 2, Col 1</td>
+            <td id="t12" class="center">Row 2, Col 2</td>
             <td class="right">Row 2, Col 3</td>
         </tr>
         <tr>
