--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
         .center {
             text-align: center;
         }
-        .right {
+        .center {
             text-align: right;
         }
         .green {
