--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
         <tr>
             <td id="t11">Row 1, Col 1</td>
             <td id="t12">Row 1, Col 2</td>
-            <td id="t13" class="right">Row 1, Col 3</td>
+            <td id="t13" class="center">Row 1, Col 3</td>
         </tr>
         <tr>
             <td class="center">Row 2, Col 1</td>
