--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
         .center {
             text-align: center;
         }
-        .center {
-            text-align: right;
+        .right {
+            text-align: center;
         }
         .green {
             background-color: green;
