--- a/main.html
+++ b/main.html
@@ -5,21 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Assignment 3</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
         table {
             border: 1px solid black;
             border-spacing: 1px;
             border-collapse: collapse;
+            width: 100%;
+            margin-bottom: 20px;
         }
         th, td {
             border: 1px solid black;
-            padding: 1px;
+            padding: 10px;
             text-align: left;
         }
         .center {
             text-align: center;
         }
         .right {
-            text-align: center;
+            text-align: right;
         }
         .green {
             background-color: green;
@@ -27,101 +43,110 @@
         .blue {
             background-color: blue;
         }
-        .middle {
-            margin: 0 auto;
-        }
     </style>
 </head>
 <body>
 
-    <h1 style="text-align: center;">HTML Assignment #3</h1>
+    <div class="container">
+        <h1>HTML Assignment #3</h1>
 
-    <!-- Table 1 -->
-    <table id="table-1" class="middle">
-        <tr>
-            <td id="t11">Row 1, Col 1</td>
-            <td id="t12">Row 1, Col 2</td>
-            <td id="t13" class="center">Row 1, Col 3</td>
-        </tr>
-        <tr>
-            <td class="center">Row 2, Col 1</td>
-            <td id="t12" class="center">Row 2, Col 2</td>
-            <td class="right">Row 2, Col 3</td>
-        </tr>
-        <tr>
-            <td>Row 3, Col 1</td>
-            <td>Row 3, Col 2</td>
-            <td class="right">Row 3, Col 3</td>
-        </tr>
-    </table>
-    <br>
+        <!-- Table 1 -->
+        <table id="table-1" class="middle">
+            <thead>
+                <tr>
+                    <th id="t11">Row 1, Col 1</th>
+                    <th id="t12">Row 1, Col 2</th>
+                    <th id="t13" class="right">Row 1, Col 3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Row 2, Col 1</td>
+                    <td class="center">Row 2, Col 2</td>
+                    <td class="right">Row 2, Col 3</td>
+                </tr>
+                <tr>
+                    <td>Row 3, Col 1</td>
+                    <td>Row 3, Col 2</td>
+                    <td class="right">Row 3, Col 3</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <!-- Table 2 -->
-    <table id="table-2" class="middle">
-        <tr>
-            <td id="t21" colspan="6">Single Cell Row</td>
-        </tr>
-        <tr>
-            <td>Row 2, Col 1</td>
-            <td>Row 2, Col 2</td>
-            <td>Row 2, Col 3</td>
-            <td>Row 2, Col 4</td>
-            <td>Row 2, Col 5</td>
-            <td>Row 2, Col 6</td>
-        </tr>
-        <tr>
-            <td>Row 3, Col 1</td>
-            <td>Row 3, Col 2</td>
-            <td>Row 3, Col 3</td>
-            <td>Row 3, Col 4</td>
-            <td>Row 3, Col 5</td>
-            <td>Row 3, Col 6</td>
-        </tr>
-        <tr>
-            <td>Row 4, Col 1</td>
-            <td>Row 4, Col 2</td>
-            <td>Row 4, Col 3</td>
-            <td>Row 4, Col 4</td>
-            <td>Row 4, Col 5</td>
-            <td>Row 4, Col 6</td>
-        </tr>
-        <tr>
-            <td>Row 5, Col 1</td>
-            <td>Row 5, Col 2</td>
-            <td>Row 5, Col 3</td>
-            <td>Row 5, Col 4</td>
-            <td>Row 5, Col 5</td>
-            <td>Row 5, Col 6</td>
-        </tr>
-        <tr>
-            <td>Row 6, Col 1</td>
-            <td>Row 6, Col 2</td>
-            <td>Row 6, Col 3</td>
-            <td>Row 6, Col 4</td>
-            <td>Row 6, Col 5</td>
-            <td>Row 6, Col 6</td>
-        </tr>
-    </table>
-    <br>
+        <!-- Table 2 -->
+        <table id="table-2" class="middle">
+            <tbody>
+                <tr>
+                    <td id="t21" colspan="6">Single Cell Row</td>
+                </tr>
+                <tr>
+                    <td>Row 2, Col 1</td>
+                    <td>Row 2, Col 2</td>
+                    <td>Row 2, Col 3</td>
+                    <td>Row 2, Col 4</td>
+                    <td>Row 2, Col 5</td>
+                    <td>Row 2, Col 6</td>
+                </tr>
+                <tr>
+                    <td>Row 3, Col 1</td>
+                    <td>Row 3, Col 2</td>
+                    <td>Row 3, Col 3</td>
+                    <td>Row 3, Col 4</td>
+                    <td>Row 3, Col 5</td>
+                    <td>Row 3, Col 6</td>
+                </tr>
+                <tr>
+                    <td>Row 4, Col 1</td>
+                    <td>Row 4, Col 2</td>
+                    <td>Row 4, Col 3</td>
+                    <td>Row 4, Col 4</td>
+                    <td>Row 4, Col 5</td>
+                    <td>Row 4, Col 6</td>
+                </tr>
+                <tr>
+                    <td>Row 5, Col 1</td>
+                    <td>Row 5, Col 2</td>
+                    <td>Row 5, Col 3</td>
+                    <td>Row 5, Col 4</td>
+                    <td>Row 5, Col 5</td>
+                    <td>Row 5, Col 6</td>
+                </tr>
+                <tr>
+                    <td>Row 6, Col 1</td>
+                    <td>Row 6, Col 2</td>
+                    <td>Row 6, Col 3</td>
+                    <td>Row 6, Col 4</td>
+                    <td>Row 6, Col 5</td>
+                    <td>Row 6, Col 6</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <!-- Table 3 -->
-    <table id="table-3" class="middle">
-        <tr class="green">
-            <td>Row 1, Col 1</td>
-            <td>Row 1, Col 2</td>
-            <td>Row 1, Col 3</td>
-        </tr>
-        <tr>
-            <td>Row 2, Col 1</td>
-            <td id="t-image"><img src="https://picsum.photos/100" alt="Sample Image"></td>
-            <td>Row 2, Col 3</td>
-        </tr>
-        <tr class="blue">
-            <td>Row 3, Col 1</td>
-            <td>Row 3, Col 2</td>
-            <td>Row 3, Col 3</td>
-        </tr>
-    </table>
+        <!-- Table 3 -->
+        <table id="table-3" class="middle">
+            <tbody>
+                <tr class="green">
+                    <td>Row 1, Col 1</td>
+                    <td>Row 1, Col 2</td>
+                    <td>Row 1, Col 3</td>
+                </tr>
+                <tr>
+                    <td>Row 2, Col 1</td>
+                    <td id="t-image" colspan="3"><img src="https://via.placeholder.com/300" alt="Sample Image"></td>
+                    <td>Row 2, Col 5</td>
+                    <td>Row 2, Col 6</td>
+                </tr>
+                <tr class="blue">
+                    <td>Row 3, Col 1</td>
+                    <td>Row 3, Col 2</td>
+                    <td>Row 3, Col 3</td>
+                    <td>Row 3, Col 4</td>
+                    <td>Row 3, Col 5</td>
+                    <td>Row 3, Col 6</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 </body>
 </html>
