--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
             <thead>
                 <tr>
                     <th id="t11">Row 1, Col 1</th>
-                    <th id="t12">Row 1, Col 2</th>
+                    <th id="t12" class="center">Row 1, Col 2</th>
                     <th id="t13" class="right">Row 1, Col 3</th>
                 </tr>
             </thead>
